"Refactor project structure, update Makefile and README, and modify API and test files"

--- a/notebooks/evaluate_model.ipynb
+++ b/notebooks/evaluate_model.ipynb
@@ -543,7 +543,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "GNNOdor",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
